<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:card_view="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent" android:layout_height="match_parent"
android:padding="16dp"
    >

<android.support.v7.widget.CardView
    android:layout_width="match_parent" android:layout_height="match_parent"
    card_view:cardElevation="5dp"
    android:id="@+id/container"
    android:animateLayoutChanges="true"
    >

    <LinearLayout
        android:id="@+id/container_after"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_gravity="center_vertical"
        android:layout_height="wrap_content">


        <TextView
            android:text="@string/tutorial_final_thanks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/accent_material_dark"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            style="@android:style/TextAppearance.Material.Medium"
            />


        <Button
            android:id="@+id/btnStart"
            android:layout_margin="10dp"
            android:text="@string/tutorial_final_starten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/container_info"
        android:padding="15dp"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/title" android:text="@string/tutorial_final_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            style="@android:style/TextAppearance.Material.Large"
            />

        <TextView
            android:text="@string/tutorial_final_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@android:style/TextAppearance.Material.Medium"
            />


        <ProgressBar
            android:id="@+id/progress"
            android:max="100"
            android:indeterminate="false"
            android:progress="1"
            android:minHeight="50dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>




</android.support.v7.widget.CardView>


</FrameLayout>