<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp"
    >

<android.support.v7.widget.CardView
    android:layout_width="match_parent" android:layout_height="match_parent"
    card_view:cardElevation="5dp"
    android:id="@+id/container"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/title" android:text="@string/tutorial_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            style="@android:style/TextAppearance.Material.Large"
            />

        <TextView
            android:text="@string/tutorial_info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@android:style/TextAppearance.Material.Medium"
            />

        <GridLayout
            android:columnCount="2"
            android:rowCount="2"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.widget.IconTextView
                android:text="{fa-info-circle}"
                android:layout_marginBottom="5dp"
                android:textSize="40sp"
                android:layout_width="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/tutorial_icon_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_row="0"
                android:layout_column="1"
                style="@android:style/TextAppearance.Material.Medium"
                />

            <android.widget.IconTextView
                android:text="{fa-volume-up}"
                android:layout_marginBottom="5dp"
                android:textSize="40sp"
                android:layout_width="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/tutorial_icon_sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_row="1"
                android:layout_column="1"
                style="@android:style/TextAppearance.Material.Medium"
                />

        </GridLayout>


    </LinearLayout>
    </android.support.v7.widget.CardView>


</FrameLayout>