<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    >
    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:title="@string/activity_items"
        android:subtitle="@string/app_name"
        android:id="@+id/toolbar"
        android:paddingTop="@dimen/abc_action_bar_default_padding_material"
        style="@style/ActionBar"
        android:background="@color/blue"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/activity_items"
                style="@android:style/TextAppearance.Material.Large.Inverse"
                android:layout_width="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/app_name"
                style="@android:style/TextAppearance.Material.Small.Inverse"
                android:layout_width="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="@dimen/abc_action_bar_subtitle_bottom_margin_material"
                android:layout_height="wrap_content" />
            <ch.hsr.nsg.themenrundgang.ui.SlidingTabLayout
                android:id="@+id/sliding_tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ch.hsr.nsg.themenrundgang.ui.SlidingTabLayout>
        </LinearLayout>
     </android.support.v7.widget.Toolbar>



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/info_card"
        android:layout_margin="10dp"
        android:animateLayoutChanges="true"
        card_view:cardElevation="5dp"
        >

        <RelativeLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.widget.IconTextView
                android:text="{fa-times}"
                android:layout_marginBottom="5dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:id="@+id/info_icon"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@android:style/TextAppearance.Material.Medium"
                android:textColor="@android:color/primary_text_light"
                android:layout_marginBottom="5dp"
                android:id="@+id/title"
                android:layout_toLeftOf="@id/info_icon"
                android:text="@string/items_info_card_title"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"

                style="@android:style/TextAppearance.Material.Small"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/info_title"
                android:layout_below="@id/title"
                android:text="@string/items_info_card_info"/>


        </RelativeLayout>


    </android.support.v7.widget.CardView>


    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>

</LinearLayout>
